--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,19 @@ buildscript {
         google()
         mavenCentral()
     }
+    ext.hilt_version = '2.38.1'
+    ext.retrofit = '2.9.0'
+    ext.okHttpVersion = '4.9.2'
+    ext.coroutinesVersion = '1.4.2'
+
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.2"
+        classpath "com.android.tools.build:gradle:7.0.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.30"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+
     }
 }
 
