--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,9 @@ dependencies {
 
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
+    // Navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
+
 }
