--- a/build.gradle
+++ b/build.gradle
@@ -8,10 +8,11 @@ buildscript {
     ext.retrofit = '2.9.0'
     ext.okHttpVersion = '4.9.2'
     ext.coroutinesVersion = '1.4.2'
+    ext.nav_version = "2.3.5"
 
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.3"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.30"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.31"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
