--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     ext.hilt_version = '2.38.1'
     ext.retrofit = '2.9.0'
     ext.okHttpVersion = '4.9.2'
-    ext.coroutinesVersion = '1.4.2'
+    ext.coroutinesVersion = '1.5.2'
     ext.nav_version = "2.3.5"
 
     dependencies {
@@ -18,6 +18,7 @@ buildscript {
         // in the individual module build.gradle files
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
 
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
 }
 
