--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,8 @@ dependencies {
     implementation('com.github.bumptech.glide:okhttp3-integration:4.11.0') {
         exclude group: 'glide-parent'
     }
+
+    // Biometric
+    implementation 'androidx.biometric:biometric:1.1.0'
+    implementation "androidx.preference:preference-ktx:1.1.1"
 }
