--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
     ext.okHttpVersion = '4.9.2'
     ext.coroutinesVersion = '1.5.2'
     ext.nav_version = "2.3.5"
+    ext.roomVersion = '2.3.0'
 
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.3"
